--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="../02crud/assets/img/CRUDp.jpg" alt="" height="70px">
                 </div>
                 <div class="card-body">
-                    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#ModalTipo">Agregar</button>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalTipo">Agregar</button>
 
                     <table class="table table-info w-auto m-auto mt-4">
                         <tr>
